# read_my_receipts

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.cross  Makefile  PLAN.md
.claude/commands/: decision.md  recover.md
.claude/skills/: archaeology.md  narratives.md  pulse.md
.deciduous/: config.toml  deciduous.db
.githooks/: pre-commit
assets/udev/: 99-epson-receipt.rules
docs/: graph-data.json
pi_setup/: dnsmasq.conf  hostapd.conf  receipt-printer.service  setup_ap.sh
src/: app.rs  error.rs  lib.rs  main.rs  receipt_markdown.rs  word_wrap.rs
src/platform/: linux.rs  macos.rs  mod.rs
src/poller/: client.rs  config.rs  format.rs  mod.rs  subscription.rs  types.rs
src/printer/: connection.rs  discovery.rs  image_proc.rs  mod.rs  models.rs  rich_print.rs  status.rs
src/upload_server/: handler.rs  subscription.rs
