[package]
name = "receipts"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
iced = { version = "0.13", features = ["tokio", "image"] }

# ESC/POS protocol with native USB transport + image printing
escpos = { version = "0.17", features = ["native_usb", "graphics"] }

# Image preprocessing (Floyd-Steinberg dithering for thermal printing)
image = "0.25"

# USB - direct dependency for hotplug detection
nusb = "0.2"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
futures = "0.3"

# HTTP client for blog API polling
reqwest = { version = "0.12", features = ["json"] }

# HTTP upload server (iPhone → Pi photo transfer)
axum = { version = "0.8", features = ["multipart"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment config loading
dotenvy = "0.15"

# Markdown parsing
pulldown-cmark = "0.12"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
